# limbo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  generate_vs2022.bat  imgui.ini  limbo.args.json  project.args.json  run_sample.sh  run_tests.sh
assets/models/: cornell_box.glb  skybox.glb
assets/models/kitchen/: kitchen.gltf
assets/models/sphere/: sphere.gltf
assets/models/white_room/: the-white-room-low.gltf
samples/triangle/: CMakeLists.txt
samples/triangle/src/: main.cpp
shaders/: bindings.hlsli  blur.hlsl  brdf.hlsli  common.hlsli  compute_triangle.hlsl  deferredlighting.hlsl  deferredshading.hlsl  gbuffer.hlsl  generatemips.hlsl  ibl.hlsl  iblcommon.hlsli  pathtracer.hlsl  pbrlighting.hlsl  quad.hlsl  quad.hlsli  random.hlsli  raytracingcommon.hlsli  rttriangle.hlsl  scenecomposite.hlsl  shadowmap.hlsl  sky.hlsl  ssao.hlsl  triangle.hlsl
shaders/raytracing/: materiallib.hlsl  pathtracer.hlsl  raytracingcommon.hlsli  rtao.hlsl  rtaoaccumulate.hlsl
src/: Core.h  Limbo.cpp  Limbo.h  buffer.h  core.h  definitions.h  device.h  draw.h  main.cpp  resourcemanager.h  resources.h  shader.h  shadercompiler.cpp  shadercompiler.h  stdafx.h  texture.h  utils.cpp  vulkandevice.cpp  vulkandevice.h
src/D3D12/: d3d12bindgroup.cpp  d3d12bindgroup.h  d3d12buffer.cpp  d3d12buffer.h  d3d12definitions.cpp  d3d12definitions.h  d3d12descriptorheap.cpp  d3d12descriptorheap.h  d3d12device.cpp  d3d12device.h  d3d12memoryallocator.cpp  d3d12memoryallocator.h  d3d12resourcemanager.cpp  d3d12resourcemanager.h  d3d12shader.cpp  d3d12shader.h  d3d12swapchain.cpp  d3d12swapchain.h  d3d12texture.cpp  d3d12texture.h
src/Vulkan/: vulkanbindgroup.cpp  vulkanbindgroup.h  vulkanbuffer.cpp  vulkanbuffer.h  vulkandefinitions.h  vulkandevice.cpp  vulkandevice.h  vulkanloader.h  vulkanresourcemanager.cpp  vulkanresourcemanager.h  vulkanshader.cpp  vulkanshader.h  vulkanswapchain.cpp  vulkanswapchain.h  vulkantexture.cpp  vulkantexture.h
src/core/: algo.h  array.h  commandline.cpp  commandline.h  core.h  fpscamera.cpp  fpscamera.h  input.cpp  input.h  jobsystem.cpp  jobsystem.h  math.h  paths.h  refcountptr.h  ringbuffer.h  timer.h  utils.cpp  utils.h  window.cpp  window.h  windowsplatform.h
src/gfx/: fpscamera.cpp  fpscamera.h  gfx.cpp  gfx.h  imguiunity.cpp  profiler.cpp  profiler.h  psocache.cpp  psocache.h  rendercontext.cpp  rendercontext.h  scene.cpp  scene.h  scenerenderer.cpp  scenerenderer.h  shaderinterop.h  shaderscache.cpp  shaderscache.h  ui.cpp  ui.h  uirenderer.cpp  uirenderer.h
src/gfx/renderer/: deferredrenderer.cpp  pathtracer.cpp  renderer.h
src/gfx/rendergraph/: rgbuilder.cpp  rgbuilder.h  rgregistry.h  rgresources.h
src/gfx/rhi/: accelerationstructure.cpp  accelerationstructure.h  bindgroup.cpp  bindgroup.h  buffer.cpp  buffer.h  commandcontext.cpp  commandcontext.h  commandqueue.cpp  commandqueue.h  definitions.cpp  definitions.h  descriptorheap.cpp  descriptorheap.h  device.cpp  device.h  draw.h  memoryallocator.cpp  memoryallocator.h  pipelinestateobject.cpp  pipelinestateobject.h  resourcehandle.h  resourcemanager.cpp  resourcemanager.h  resourcepool.h  ringbufferallocator.cpp  ringbufferallocator.h  rootsignature.cpp  rootsignature.h  sampler.cpp  sampler.h  shader.cpp  shader.h  shaderbindingtable.cpp  shaderbindingtable.h  shadercompiler.cpp  shadercompiler.h  staticstates.h  swapchain.cpp  swapchain.h  (+2 more)
src/gfx/techniques/: SSAO.cpp  pathtracing.cpp  pathtracing.h  rendertechnique.cpp  rendertechnique.h  rtao.cpp  rtao.h  shadowmapping.cpp  shadowmapping.h  ssao.cpp  ssao.h
src/gfx/techniques/composite/: composite.cpp  composite.h
src/gfx/techniques/deferredlighting/: deferredlighting.cpp  deferredlighting.h
src/gfx/techniques/gbuffer/: gbuffer.cpp  gbuffer.h
src/gfx/techniques/helpers/: blur.h
src/gfx/techniques/pathtracing/: pathtracing.cpp  pathtracing.h
src/gfx/techniques/rtao/: rtao.cpp  rtao.h
src/gfx/techniques/shadowmapping/: shadowmapping.cpp  shadowmapping.h
src/gfx/techniques/skybox/: skybox.cpp  skybox.h
src/gfx/techniques/ssao/: ssao.cpp  ssao.h
src/tests/: jobsystem_tests.cpp  refcountptr_tests.cpp  resource_handles.cpp  resourcehandles_tests.cpp  tests.cpp  tests.h
src/tests/gfx/: computetriangle.h  graphicstriangle.h
src/tests/gfx/shaders/: compute_triangle.hlsl
tests/: main.cpp  resource_handles.cpp
